[gd_scene load_steps=9 format=3 uid="uid://dxgb8s15mrwym"]

[ext_resource type="Texture2D" uid="uid://cbavjatc8q273" path="res://sprites/rosa/spr_bigFist.png" id="1_4p1c4"]
[ext_resource type="Script" path="res://scripts/Fist.gd" id="1_xo1sx"]
[ext_resource type="PackedScene" uid="uid://bkrrmx2twhic1" path="res://scenes/obstacles/blastZone.tscn" id="3_3k4wl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8flcx"]
radius = 28.178

[sub_resource type="Animation" id="Animation_qer2b"]
resource_name = "Hit"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SprFist:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8, 1.4),
"transitions": PackedFloat32Array(0.0346741, 1, 1.7411, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-137, 0), Vector2(-137, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FistCollisionShape:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8, 1.4),
"transitions": PackedFloat32Array(0.0346741, 1, 1.7411, 0.0346741),
"update": 0,
"values": [Vector2(-30, 3), Vector2(-169, 3), Vector2(-169, 3), Vector2(-30, 3)]
}

[sub_resource type="Animation" id="Animation_l82xw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SprFist:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FistCollisionShape:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-30, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1aabe"]
_data = {
"Hit": SubResource("Animation_qer2b"),
"RESET": SubResource("Animation_l82xw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_03lxc"]
size = Vector2(163, 50)

[node name="Fist" type="Area2D"]
position = Vector2(61, 0)
script = ExtResource("1_xo1sx")

[node name="SprFist" type="Sprite2D" parent="."]
texture = ExtResource("1_4p1c4")
offset = Vector2(8, 0)
hframes = 2
metadata/_edit_lock_ = true

[node name="FistCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(-30, 3)
shape = SubResource("CircleShape2D_8flcx")
disabled = true
metadata/_edit_lock_ = true

[node name="blastZone" parent="FistCollisionShape" instance=ExtResource("3_3k4wl")]
visible = false
position = Vector2(-44, -35)
scale = Vector2(4.90625, 2)
damage = 1
damageType = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1aabe")
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-131.5, 3)
shape = SubResource("RectangleShape2D_03lxc")
metadata/_edit_lock_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
